Fix dark mode bug

--- a/src/index.scss
+++ b/src/index.scss
@@ -278,7 +278,8 @@ td {
 	}
 
 	p,
-	.ds-text {
+	.ds-text,
+	ul {
 		color: rgba(255, 255, 255, 0.88);
 	}
 
